Update tmux conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,6 +58,12 @@ bind-key -r - resize-pane -D 10
 bind-key -r + resize-pane -U 10
 bind-key -r > resize-pane -R 10
 
+# Use system clipboard in copy mode
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
 # ==================================================
 # Plugins settings
 # ==================================================
