--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,10 @@ set -sg escape-time 0
 set -g mouse on
 
 # Enable color and italic support 
-set -g default-terminal "screen-256color-italic"
+# set -g default-terminal "screen-256color-italic"
+# set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # ==================================================
 # Key bindings and mappings
@@ -43,7 +46,7 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-bind-key \\ select-pane -l
+# bind-key \\ select-pane -l
 
 # Better pane switching
 bind-key -n C-h  if-shell  "$is_vim"  "send-keys C-h"  "select-pane -L"
