--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,6 +61,9 @@ bind-key -r - resize-pane -D 10
 bind-key -r + resize-pane -U 10
 bind-key -r > resize-pane -R 10
 
+# Better session switching
+bind-key a choose-session
+
 # Use system clipboard in copy mode
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
