--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,9 +11,7 @@ set -sg escape-time 0
 set -g mouse on
 
 # Enable color and italic support 
-# set -g default-terminal "screen-256color-italic"
-# set -g default-terminal "tmux-256color"
-set -g default-terminal "tmux-256color"
+if-shell -b '[ $(uname) = "Darwin" ]' "set -g default-terminal screen-256color-italic"
 set -ga terminal-overrides ",*256col*:Tc"
 
 # ==================================================
