Set tmux term to tmux-256color on Linux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,8 +10,9 @@ set -sg escape-time 0
 # Mouse
 set -g mouse on
 
-# Enable color and italic support 
+# Set term and overrides
 if-shell -b '[ $(uname) = "Darwin" ]' "set -g default-terminal screen-256color-italic"
+if-shell -b '[ $(uname) = "Linux" ]' "set -g default-terminal tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 # ==================================================
