Switch tmux theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -99,8 +99,16 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # prefix + C-s save, C-r restore
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
 
-# Used for displaying the current system battery status
+# Used for displaying the current system battery status and cpu usage
+set -g @plugin 'tmux-plugins/tmux-cpu' # CPU usage
 set -g @plugin 'tmux-plugins/tmux-battery' # Batter percentage
+
+# Theme
+set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+set -g @tokyo-night-tmux_window_id_style fsquare
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
+
 
 # Used for displaying the current system network status
 set -g @plugin 'tmux-plugins/tmux-online-status' # Online status
@@ -108,11 +116,6 @@ set -g @plugin 'tmux-plugins/tmux-online-status' # Online status
 # Do not auto-name panes. Might fix an issue where tmux-resurrect is not saving the name of the first window
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
-
-# Onedark theme
-set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @onedark_date_format "%D"
-set -g @onedark_time_format "%I:%M %p"
 
 # Initialize plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
