--- a/ghostty/config
+++ b/ghostty/config
@@ -5,7 +5,7 @@ background-opacity = 0.95
 background-blur-radius = 20
 mouse-hide-while-typing = true
 mouse-scroll-multiplier = 0.5
-macos-titlebar-style = transparent
+macos-titlebar-style = tabs
 window-height = 36
 window-width = 120
 window-padding-x = 4
